# bclimtool

./: CMakeLists.txt  README.md
dep/lib/Windows_x86_32/: libpng16_static.lib  zlibstatic.lib
dep/lib/Windows_x86_64/: libpng16_static.lib  zlibstatic.lib
src/: CMakeLists.txt  bclim.cpp  bclim.h  bclimtool.cpp  bclimtool.h  utility.cpp  utility.h
